--- a/themes/Learning/Learning_structure_large_sampling/extra.html
+++ b/themes/Learning/Learning_structure_large_sampling/extra.html
@@ -1,3 +1,8 @@
+All our targets have to learn the structure of the Bayesian network
+alarm.bif from data. The learning process is done with the best algorithm for each target.
+We then compare the performance of each algorithm by computing the Fscore, Recall and Precision of the learned
+structure with respect to the true structure.
+
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="360pt" height="309pt" viewBox="0.00 0.00 360.00 309.21">
 <g id="graph0" class="graph" transform="scale(0.404729 0.404729) rotate(0) translate(4 760)">
 <title>G</title>
